# RelayRL-bench

./: .gitignore  Cargo.toml  README.md  client_config.json  config.json
bench_beta2/: Cargo.toml  client_config.json  relayrl_scalar_py32_ft.py  relayrl_scalar_py_32.py  relayrl_vec_py32_ft.py  relayrl_vec_py_32.py  rllib_lunarlander_32.py  rllib_lunarlander_vec.py  sb3_lunarlander_32.py  sb3_lunarlander_vec.py
bench_beta2/lunarlander-rl/: Cargo.toml
bench_beta2/lunarlander-rl/src/env/: mod.rs  vec.rs
bench_beta2/patches/relayrl_env_trait/: Cargo.toml
bench_beta2/patches/relayrl_env_trait/src/: lib.rs
bench_beta2/patches/relayrl_framework/: Cargo.toml  Cargo.toml.orig  README.md
bench_beta2/patches/relayrl_framework/benches/old/: runtime_benchmarks.rs
bench_beta2/patches/relayrl_framework/example_configs/: client_config.json
bench_beta2/patches/relayrl_framework/example_model_module/server_model/: metadata.json
bench_beta2/patches/relayrl_framework/src/network/client/: agent.rs
bench_beta2/patches/relayrl_framework/tests/: local_client_smoke.rs
bench_beta2/patches/relayrl_types/: Cargo.toml
bench_beta2/patches/relayrl_types/src/data/utilities/: integrity.rs
bench_beta2/patches/relayrl_types/src/model/: mod.rs
bench_beta2/relayrl-pyo3/: Cargo.toml
bench_beta2/relayrl-pyo3/src/: agent.rs  lib.rs  py_env.rs
bench_beta2/results/: bench_lunar_beta2_set_env_128envs_1actor_2026-04-24.txt  bench_lunar_beta2_set_env_1actor_2026-04-24.txt  bench_lunar_beta2_set_env_arch_fix_1actor_2026-04-24.txt  bench_lunar_beta2_set_env_direct_1actor_2026-04-24.txt  bench_lunar_beta2_set_env_vec128_1actor_2026-04-24.txt  bench_lunar_beta2_set_env_vec512_1k_steps_2026-04-24.txt
bench_beta3/: Cargo.toml
bench_beta3/lunarlander-rl/: Cargo.toml
bench_beta3/patches/relayrl_framework/: .cargo_vcs_info.json  CHANGELOG.md  Cargo.toml  Cargo.toml.orig  README.md
bench_beta3/patches/relayrl_framework/src/network/client/: agent.rs
bench_beta3/patches/relayrl_framework/src/network/server/: mod.rs  training_server.rs
bench_beta3/patches/relayrl_framework/src/utilities/: configuration.rs
bench_beta3/patches/relayrl_types/: Cargo.toml
bench_beta3/patches/relayrl_types/src/data/utilities/: metadata.rs
bench_beta3/patches/relayrl_types/src/model/: mod.rs
bench_beta4/: Cargo.toml  SAMPLE_FACTORY_APPO_ANALYSIS.md  bench_envpool_eval.py  bench_rllib.py  bench_sb3.py  bench_sb3_subproc_eval.py  bench_sf.py  bench_sf_lunarlander.py  results_fix_b4.txt  results_sf_lunarlander.txt  results_sf_matched.txt  run_with_rss.py
bench_beta4/.cargo/: config.toml
bench_beta4/gridworld-bench/: Cargo.toml
bench_beta4/gridworld-bench/src/: lib.rs
bench_beta4/lunarlander-rl/: Cargo.toml
bench_beta4/lunarlander-rl/src/env/: mod.rs  vec.rs
bench_beta4/patches/relayrl_algorithms/: .cargo_vcs_info.json  CHANGELOG.md  Cargo.toml  Cargo.toml.orig  README.md
bench_beta4/patches/relayrl_algorithms/src/: lib.rs
bench_beta4/patches/relayrl_algorithms/src/algorithms/: mod.rs  onnx_builder.rs  pt_builder.rs
bench_beta4/patches/relayrl_algorithms/src/logging/: mod.rs
bench_beta4/patches/relayrl_algorithms/src/templates/: base_algorithm.rs  mod.rs
bench_beta4/patches/relayrl_framework/: .cargo_vcs_info.json  CHANGELOG.md  Cargo.toml  Cargo.toml.orig  README.md
bench_beta4/patches/relayrl_framework/example_configs/: inference_server_config.json  training_server_config.json
bench_beta4/patches/relayrl_framework/src/: lib.rs
bench_beta4/patches/relayrl_framework/src/presets/: mod.rs
bench_beta4/patches/relayrl_framework/src/utilities/: config_json.rs  configuration.rs
bench_beta4/patches/relayrl_framework/tests/: local_client_smoke.rs
bench_beta4/patches/relayrl_types/src/data/: trajectory.rs
bench_beta4/patches/relayrl_types/src/model/: hot_reloadable.rs  mod.rs
bench_beta4/src/: py_env.rs
bench_beta4_orig/: Cargo.toml  client_config.json
bench_beta4_orig/patches/relayrl_types/: Cargo.toml
bench_beta4_orig/patches/relayrl_types/src/data/: mod.rs
bench_beta5/: Cargo.toml  README.md  SAMPLE_EFFICIENCY_LOG.md  SF_VS_RELAYRL_COMPARISON.md  client_config.json
bench_beta5/gridworld-bench/: Cargo.toml
bench_beta5/gridworld-bench/src/: lib.rs
bench_beta5/lunarlander-rl/: Cargo.toml
bench_beta5/lunarlander-rl/src/env/: mod.rs  vec.rs
bench_beta5/patches/relayrl_algorithms/: .cargo_vcs_info.json  CHANGELOG.md  Cargo.toml  Cargo.toml.orig  README.md
bench_beta5/patches/relayrl_algorithms/src/: lib.rs
bench_beta5/patches/relayrl_algorithms/src/algorithms/: mod.rs  onnx_builder.rs  torch_builder.rs
bench_beta5/patches/relayrl_algorithms/src/templates/: base_algorithm.rs
bench_beta5/patches/relayrl_env_trait/: .cargo_vcs_info.json  CHANGELOG.md  Cargo.toml  Cargo.toml.orig
bench_beta5/patches/relayrl_env_trait/src/: lib.rs
bench_beta5/patches/relayrl_framework/: .cargo_vcs_info.json  CHANGELOG.md  Cargo.toml  Cargo.toml.orig  README.md
bench_beta5/patches/relayrl_framework/example_model_module/client_model/: metadata.json
bench_beta5/patches/relayrl_framework/src/network/: mod.rs
bench_beta5/patches/relayrl_framework/src/utilities/: config_json.rs  configuration.rs
bench_beta5/patches/relayrl_framework/tests/: local_client_smoke.rs
bench_beta5/patches/relayrl_types/: .cargo_vcs_info.json  CHANGELOG.md  Cargo.toml  Cargo.toml.orig  README.md
bench_beta5/patches/relayrl_types/src/data/: action.rs  trajectory.rs
bench_beta5/patches/relayrl_types/src/model/: mod.rs
bench_beta5/scripts/: bench.sh  sf_lunar_bench.py
bench_beta5/src/: lib.rs  py_env.rs
benchmark_compare/: Cargo.toml  run_comparison.sh
benchmark_compare/relayrl_framework_patched/: CHANGELOG.md
benchmark_compare/relayrl_framework_patched/src/network/client/: mod.rs
benchmark_compare/src/: main.rs  vec_env.rs
crates/relayrl-e2e/: Cargo.toml
crates/relayrl-e2e/src/: main.rs
crates/relayrl-e2e/src/environments/: mod.rs
crates/relayrl-pyo3/: Cargo.toml  pyproject.toml
crates/relayrl-pyo3/src/: lib.rs
crates/rlox-bench/: Cargo.toml
crates/rlox-bench/src/: main.rs
(+271 files in other folders)
