[workspace]
members = ["crates/relayrl-e2e", "crates/gridworld-rl", "crates/lunarlander-rl", "crates/relayrl-pyo3", "crates/rlox"]
resolver = "3"

[workspace.dependencies]
relayrl_framework = { version = "0.5.0-beta", default-features = false }
relayrl_algorithms = { version = "0.1.0", default-features = false }
relayrl_env_trait = "1.0.0"
relayrl_types = "0.5.4"

iced = "0.14.0"

[patch.crates-io]
# Override defaults to exclude tch-model/tch-backend (libtorch unavailable in this env).
relayrl_types = { path = "./patches/relayrl_types" }
relayrl_algorithms = { path = "./patches/relayrl_algorithms" }
relayrl_framework = { path = "./patches/relayrl_framework" }
