[workspace]
members = [".", "lunarlander-rl", "relayrl-pyo3"]

[patch.crates-io]
relayrl_framework = { path = "./patches/relayrl_framework" }
relayrl_env_trait = { path = "./patches/relayrl_env_trait" }
relayrl_types     = { path = "./patches/relayrl_types" }

[package]
name = "bench-beta2"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bench_lunar_beta2"
path = "src/main.rs"

[dependencies]
relayrl_framework  = { version = "=0.5.0-beta.2", default-features = false, features = ["client"] }
relayrl_algorithms = { version = "=0.2.0", default-features = false, features = ["ndarray-backend"] }
relayrl_types      = { version = "=0.7.0", default-features = false, features = ["ndarray-backend", "onnx-model"] }
relayrl_env_trait  = "1.1"
lunarlander-rl     = { path = "./lunarlander-rl" }
gridworld-rl       = { path = "../crates/gridworld-rl" }

burn-ndarray = "0.20.1"
burn-tensor  = "0.20.1"

tokio   = { version = "1", features = ["full"] }
futures = "0.3"
clap    = { version = "4", features = ["derive"] }
