[workspace]
members = [".", "lunarlander-rl"]

[patch.crates-io]
# Disable tch/libtorch features that can't build in this environment.
relayrl_types = { path = "./patches/relayrl_types" }
# Rayon-parallel ScalarVecEnv patch.
relayrl_framework = { path = "./patches/relayrl_framework" }

[package]
name = "bench-beta3"
version = "0.1.0"
edition = "2021"

[dependencies]
relayrl_framework  = { version = "=0.5.0-beta.3", default-features = false, features = ["client"] }
relayrl_algorithms = { version = "=0.2.0",         default-features = false, features = ["ndarray-backend"] }
relayrl_types      = { version = "=0.7.1",         default-features = false, features = ["ndarray-backend", "onnx-model"] }
relayrl_env_trait  = "1.2"
lunarlander-rl     = { path = "./lunarlander-rl" }

burn-ndarray = "0.20.1"
burn-tensor  = "0.20.1"
rayon        = "1"

tokio   = { version = "1", features = ["full"] }
futures = "0.3"
clap    = { version = "4", features = ["derive"] }

[[bin]]
name = "bench_lunar_set_env_scalar8192"
path = "src/bin/bench_lunar_set_env_scalar8192.rs"

[[bin]]
name = "bench_lunar_set_env_scalar16384"
path = "src/bin/bench_lunar_set_env_scalar16384.rs"

[[bin]]
name = "bench_lunar_set_env_vec8192"
path = "src/bin/bench_lunar_set_env_vec8192.rs"

[[bin]]
name = "bench_lunar_set_env_scalar1"
path = "src/bin/bench_lunar_set_env_scalar1.rs"

[[bin]]
name = "bench_lunar_direct_scalar1"
path = "src/bin/bench_lunar_direct_scalar1.rs"

[[bin]]
name = "bench_lunar_direct_scalar8192"
path = "src/bin/bench_lunar_direct_scalar8192.rs"

[[bin]]
name = "bench_request_action_latency"
path = "src/bin/bench_request_action_latency.rs"
