[workspace]
members = [".", "lunarlander-rl", "gridworld-bench"]

[patch.crates-io]
# Disable tch/libtorch features that can't build in this environment.
relayrl_types      = { path = "./patches/relayrl_types" }
relayrl_framework  = { path = "./patches/relayrl_framework" }
relayrl_algorithms = { path = "./patches/relayrl_algorithms" }

[package]
name = "bench-beta4"
version = "0.1.0"
edition = "2021"
autobins = false

[dependencies]
relayrl_framework  = { version = "=0.5.0-beta.4", default-features = false, features = ["client", "tch-backend"] }
relayrl_algorithms = { version = "=0.3.0",         default-features = false, features = ["ndarray-backend", "tch-backend", "onnx-model", "tch-model"] }
relayrl_types      = { version = "=0.7.2",         default-features = false, features = ["ndarray-backend", "tch-backend", "onnx-model", "tch-model"] }
relayrl_env_trait  = "1.2"
lunarlander-rl     = { path = "./lunarlander-rl", features = ["tch-backend"] }
gridworld-bench    = { path = "./gridworld-bench" }

burn-ndarray = { version = "0.20.1", features = ["blas-openblas-system"] }
burn-tch     = "0.20.1"
burn-tensor  = "0.20.1"
rayon        = "1"

tokio   = { version = "1", features = ["full"] }
futures = "0.3"
clap    = { version = "4", features = ["derive"] }

[[bin]]
name = "bench_lunar_direct_scalar1"
path = "src/bin/bench_lunar_direct_scalar1.rs"

[[bin]]
name = "bench_lunar_set_env_scalar1"
path = "src/bin/bench_lunar_set_env_scalar1.rs"

[[bin]]
name = "bench_lunar_ppo_scalar1"
path = "src/bin/bench_lunar_ppo_scalar1.rs"

[[bin]]
name = "bench_grid_ppo_scalar1"
path = "src/bin/bench_grid_ppo_scalar1.rs"

[[bin]]
name = "bench_lunar_ppo_1env"
path = "src/bin/bench_lunar_ppo_1env.rs"

[[bin]]
name = "bench_lunar_ppo_64env"
path = "src/bin/bench_lunar_ppo_64env.rs"

[[bin]]
name = "bench_lunar_ppo_tch"
path = "src/bin/bench_lunar_ppo_tch.rs"
