[package]
name = "bench-compare"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bench_gridworld_vecenv_beta2_patched"
path = "src/main.rs"

[dependencies]
relayrl_framework  = { path = "relayrl_framework_patched", default-features = false, features = ["client"] }
relayrl_algorithms = { version = "0.2.0", default-features = false, features = ["ndarray-backend"] }
relayrl_types      = { version = "0.7.0", default-features = false, features = ["ndarray-backend", "onnx-model"] }

burn-ndarray = "0.20.1"
burn-tensor  = "0.20.1"

tokio  = { version = "1", features = ["full"] }
clap   = { version = "4", features = ["derive"] }
rayon  = "1"
