[package]
name = "relayrl-pyo3"
version = "0.1.0"
edition = "2021"

[lib]
name = "relayrl_pyo3"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }

relayrl_framework  = { version = "=0.5.0-beta.2", default-features = false, features = ["client"] }
relayrl_algorithms = { version = "=0.2.0",         default-features = false, features = ["ndarray-backend"] }
relayrl_types      = { version = "=0.7.0",         default-features = false, features = ["ndarray-backend", "onnx-model"] }
relayrl_env_trait  = "1.1"

burn-ndarray = "0.20.1"
burn-tensor  = "0.20.1"

tokio    = { version = "1", features = ["full"] }
bytemuck = "1"
uuid     = { version = "1", features = ["v4"] }
