[package]
name = "relayrl-e2e"
version = "0.1.0"
authors = ["jrcalgo <jacksonr121@outlook.com"]
edition = "2024"
description = "An end-to-end implementation of the RelayRL framework and its workflow."
repository = "https://github.com/jrcalgo/relayrl-end2end"
documentation = "https://docs.rs/crate/relayrl-e2e"
readme = "README.md"
keywords = ["relayrl", "rl", "e2e", "benchmark", "trajectory"]
categories = ["science", "simulation", "command-line-utilities", "development-tools::testing", "development-tools::profiling"]
license = "Apache-2.0"

[features]
default = ["ndarray"]
ndarray = [
    "burn-ndarray",
    "relayrl_algorithms/ndarray-backend",
]
tch = [
    "burn-tch",
    "relayrl_framework/tch-backend",
    "relayrl_algorithms/tch-backend",
]

[dependencies]
relayrl_framework = { workspace = true, default-features = false, features = ["client"] }
relayrl_algorithms = { workspace = true }
relayrl_types = { workspace = true }
relayrl_env_trait = { workspace = true }
gridworld-rl = { path = "../gridworld-rl" }

burn-ndarray = { version = "0.20.1", optional = true }
burn-tch    = { version = "0.20.1", optional = true }
burn-tensor = "0.20.1"

tokio = { version = "1.49.0", features = ["full"] }
clap  = { version = "4.5.54", features = ["derive"] }
