[package]
name = "relayrl_env_trait"
version = "1.1.0"
edition = "2024"
license = "Apache-2.0"

[lib]
name = "relayrl_env_trait"
path = "src/lib.rs"

[dependencies]
burn-tensor = "0.20.1"
bytemuck    = { version = "1", features = ["derive"] }
thiserror   = "2.0.18"
uuid        = { version = "1.22.0", features = ["serde", "v4"] }
