[package]
name = "relayrl_framework"
version = "0.5.0-beta.3"
authors = ["jrcalgo <jacksonr121@outlook.com>"]
edition = "2024"
description = "A system-oriented multi-agent reinforcement learning framework."
repository = "https://github.com/jrcalgo/relayrl"
license = "Apache-2.0"

[lib]
name = "relayrl_framework"
crate-type = ["rlib"]
path = "src/lib.rs"

[features]
default = ["client", "logging", "metrics"]
client = []
training-server = []
inference-server = []
zmq-transport    = ["zmq", "relayrl_types/codec-full"]
nats-transport   = ["async-nats", "tokio-stream", "relayrl_types/codec-full"]
tch-backend      = ["relayrl_types/tch-backend", "relayrl_types/tch-model"]
logging          = ["log4rs"]
metrics          = ["prometheus", "opentelemetry", "opentelemetry_sdk", "opentelemetry-otlp"]
profile          = ["flamegraph", "console-subscriber"]

[dependencies]
relayrl_types        = { version = "=0.7.1", default-features = false, features = ["ndarray-backend", "onnx-model"] }
relayrl_algorithms   = { version = "=0.2.0", default-features = false, features = ["ndarray-backend"] }
relayrl_env_trait    = "1.2"
active-uuid-registry = { version = "0.7.1", features = ["concurrent-map"] }

tokio         = { version = "1", features = ["full"] }
serde         = { version = "1", features = ["derive"] }
rand          = "0.10"
log           = { version = "0.4", features = ["kv"] }
dashmap       = "6"
thiserror     = "2"
async-trait   = "0.1"
burn-tensor   = "0.20.1"
once_cell     = "1.19"
tempfile      = "3"
serde_json    = "1"
bytemuck      = "1"
half          = "2"
bincode       = "2"
bytes         = "1"
generic-array = "0.14"
arc-swap      = "1"
crossbeam-utils = "0.8"
rayon         = "1"

arrow       = { version = "57", features = ["ipc_compression", "default"] }
arrow-schema = "57"
arrow-array  = "57"

zmq          = { version = "0.10", optional = true }
async-nats   = { version = "0.47", features = ["jetstream"], optional = true }
prometheus   = { version = "0.14", features = ["process"], optional = true }
opentelemetry_sdk = { version = "0.31", features = ["metrics", "rt-tokio"], optional = true }
opentelemetry     = { version = "0.31", optional = true }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic"], optional = true }
log4rs       = { version = "1.3", optional = true }
tokio-stream = { version = "0.1", optional = true }
flamegraph   = { version = "0.6", optional = true }
console-subscriber = { version = "0.4", optional = true }

[dev-dependencies]
burn-ndarray = "0.20.1"
criterion    = { version = "0.5", features = ["html_reports", "async_tokio"] }
