[package]
name = "relayrl_types"
version = "0.7.1"
edition = "2024"
license = "Apache-2.0"

[lib]
name = "relayrl_types"
path = "src/lib.rs"

[features]
default        = ["ndarray-backend", "onnx-model"]
ndarray-backend = ["burn-ndarray", "half"]
tch-backend    = ["burn-tch", "half"]
inference-models = ["tch-model", "onnx-model"]
tch-model      = ["tch", "tokio", "tempfile"]
onnx-model     = ["ort", "tokio", "tempfile", "ndarray"]
encryption     = ["chacha20poly1305", "bincode"]
compression    = ["lz4_flex", "zstd", "bincode"]
integrity      = ["blake3"]
quantization   = ["half"]
metadata       = ["bincode"]
zerocopy       = ["bytes"]
codec-basic    = ["compression", "integrity", "zerocopy"]
codec-secure   = ["codec-basic", "encryption"]
codec-full     = ["codec-secure", "metadata", "quantization"]

[dependencies]
serde        = { version = "1.0.228", features = ["derive"] }
serde_json   = "1.0.149"
thiserror    = "2.0.18"
bytemuck     = "1.25.0"
dashmap      = "6.1.0"
uuid         = { version = "1.22.0", features = ["serde", "v4"] }
csv          = "1.4.0"
arrow        = "57.3.0"
burn-tensor  = "0.20.1"
arc-swap     = "1.9.1"

burn-ndarray        = { version = "0.20.1",         optional = true }
burn-tch            = { version = "0.20.1",         optional = true }
tch                 = { version = "=0.22.0",        features = ["download-libtorch"], default-features = false, optional = true }
ort                 = { version = "=2.0.0-rc.11",   features = ["load-dynamic"],     default-features = false, optional = true }
tokio               = { version = "1.50.0",         features = ["full"],             optional = true }
tempfile            = { version = "3.26.0",         optional = true }
ndarray             = { version = "0.17.2",         optional = true }
half                = { version = "2.7.1",          optional = true }
blake3              = { version = "1.8.3",          optional = true }
bytes               = { version = "1.11.1",         optional = true }
zstd                = { version = "0.13.3",         optional = true }
lz4_flex            = { version = "0.12.0",         optional = true }
chacha20poly1305    = { version = "0.10.1",         optional = true }
bincode             = { version = "2.0.1",          features = ["serde"], optional = true }
